Solved AoC2019 Day 2 Part 2